--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.4.6",
     "express": "^4.21.1",
     "express-handlebars": "^8.0.1",
+    "express-session": "^1.18.1",
     "js-sha256": "^0.11.0",
     "nodemon": "^3.1.7",
     "pg-promise": "^11.10.2"
